--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
   color: #3d546e;
   font-weight: normal;
   font-family: "Cuprum";
+  background-color: #f9f5f0;
 }
 
 .services h2, .company h2, .main_block h2{
@@ -44,4 +45,209 @@ h1{
   color: #32425c;
   font-weight: normal;
   font-family: "Cuprum";
+}
+
+.container{
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+  outline: 1px solid yellow;
+}
+
+.up_header{
+  background-color: #33445a;
+}
+
+.bottom_header{
+  background-color: #f3f7f8;
+  margin-top: 0;
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+
+.user_block{
+  width: 940px;
+  margin-bottom: 40px;
+}
+
+.info{
+  width: 200px;
+  outline: 1px solid green;
+  float: left;
+  margin-right: 70px;
+  margin-left: 50px;
+}
+
+.contacts{
+  width: 270px;
+  outline: 1px solid green;
+  float: left;
+  margin-right: 68px;
+}
+
+.login_options{
+  width: 282px;
+  outline: 1px solid green;
+  float: right;
+}
+
+.header_nav{
+  background-color: #3d546e;
+  outline: 1px solid green;
+}
+
+.clearfix{
+  content: "";
+
+  display: table;
+  clear: both;
+}
+
+.catalog{
+  margin-top: 60px;
+  margin-bottom: 52px;
+}
+
+.catalog_item{
+  width: 300px;
+}
+
+.materials{
+  float: left;
+  background-color: #ffbf47;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.tools{
+  float: left;
+  background-color: #3bbce3;
+  margin-bottom: 20px;
+}
+
+.tech{
+  float: right;
+  background-color: #dc91d8;
+  margin-bottom: 20px;
+}
+
+.catalog_slider{
+  float: left;
+}
+
+/*не понял как поместить кнопку поверх элемента*/
+.catalog_slider .main_btn{
+
+}
+
+.discount{
+  float: right;
+  background-color: #8ed78f;
+  margin-bottom: 20px;
+}
+
+.delivery{
+  float: right;
+  background-color: #ffc047;
+}
+
+.products_item{
+  outline: 1px solid #eaeaea;
+  width: 220px;
+  float: left;
+  margin-right: 20px;
+}
+
+.products_item:last-child{
+  margin-right: 0;
+}
+
+.manufacters_item{
+  width: 220px;
+  outline: 1px solid #eaeaea;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.manufacters_item:nth-child(4n){
+  margin-right: 0;
+}
+
+.manufacters{
+  margin-bottom: 85px;
+}
+
+.main_block{
+  width: 940px;
+  padding-top: 65px;
+  padding-bottom: 88px;
+}
+
+/*не понял, почему фон не растягивается по ширине, нужно вынести из блока main?*/
+.services{
+  background-color: #f3f7f8;
+}
+
+.company_about{
+  width: 570px;
+  float: left;
+  outline: 1px solid green;
+}
+
+/*не прилипает почему-то к правому краю*/
+.company_contacts{
+  width: 300px;
+  float: right;
+  outline: 1px solid green;
+}
+
+.up_footer{
+  background-color: #3d546e;
+  padding-bottom: 50px;
+}
+
+.about{
+  width: 350px;
+  float: left;
+  outline: 1px solid green;
+}
+
+.footer_nav{
+  width: 560px;
+  float: right;
+  margin-top: 40px;
+  outline: 1px solid green;
+}
+
+.catalog_nav{
+  width: 560px;
+  float: right;
+  margin-top: 40px;
+  outline: 1px solid green;
+}
+
+.bottom_footer{
+  background-color: #33445a;
+  padding-top: 35px;
+  padding-bottom: 30px;
+}
+
+.footer_copyright{
+  width: 240px;
+  float: left;
+  margin-right: 150px;
+  outline: 1px solid green;
+}
+
+.footer_social{
+  width: 132px;
+  float: left;
+  outline: 1px solid green;
+}
+
+.footer_contacts{
+  width: 300px;
+  float: right;
+  outline: 1px solid green;
 }
