--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/*@font-face {
+  font-family: Cuprum;
+  src: url(fonts/Cuprum/Cuprum-Regular.ttf);
+}*/
+
 body{
   font-size: 13pt;
   line-height: 24pt;
@@ -21,6 +26,9 @@ body{
   background-color: #f9f5f0;
   width: 940px;
   margin-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .title h2{
@@ -29,7 +37,6 @@ body{
   color: #3d546e;
   font-weight: normal;
   font-family: "Cuprum";
-  float: left;
   margin-left: 30px;
 }
 
@@ -46,7 +53,6 @@ body{
 .title .main_btn {
   margin-right: 25px;
   margin-top: 25px;
-  float: right;
 }
 
 .services h2, .company h2, .main_block h2{
@@ -96,26 +102,23 @@ h1{
 .user_block{
   width: 940px;
   margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .info{
   width: 200px;
   outline: 1px solid green;
-  float: left;
-  margin-right: 70px;
   margin-left: 50px;
 }
 
 .contacts{
   width: 270px;
-  float: left;
-  margin-right: 68px;
 }
 
 .login_options{
   width: 282px;
   outline: 1px solid green;
-  float: right;
 }
 
 .header_nav{
@@ -137,6 +140,9 @@ h1{
 .catalog{
   margin-top: 60px;
   margin-bottom: 52px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .catalog_item{
@@ -144,27 +150,22 @@ h1{
 }
 
 .materials{
-  float: left;
   background-color: #ffbf47;
-  margin-right: 20px;
   margin-bottom: 20px;
 }
 
 .tools{
-  float: left;
   background-color: #3bbce3;
   margin-bottom: 20px;
 }
 
 .tech{
-  float: right;
   background-color: #dc91d8;
   margin-bottom: 20px;
 }
 
 /*фон не появился почему-то*/
 .catalog_slider{
-  float: left;
   width: 620px;
   height: 266px;
   background-image: url(img/catalog_slider_photo_1.jpg);
@@ -178,21 +179,19 @@ h1{
   outline: 1px solid green;
 }
 
-/*как-то не понятно как тут работает, пришлось делать инлайнблок, иначе с места не сдвигалась кнопка, а расстояние на глаз пришлось, не понял откуда считать*/
 .catalog_slider .main_btn{
   display: inline-block;
   margin-left: 26px;
   margin-top: 135px;
 }
 
+/*не понял как на флексах сделать доставку под скидками*/
 .discount{
-  float: right;
   background-color: #8ed78f;
   margin-bottom: 20px;
 }
 
 .delivery{
-  float: right;
   background-color: #ffc047;
 }
 
@@ -200,27 +199,21 @@ h1{
   margin-bottom: 20px;
 }
 
+.popular{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .products_item{
   outline: 1px solid #eaeaea;
   width: 220px;
-  float: left;
-  margin-right: 20px;
-}
-
-.products_item:last-child{
-  margin-right: 0;
 }
 
 .manufacters_item{
   width: 220px;
   outline: 1px solid #eaeaea;
-  float: left;
-  margin-right: 20px;
   margin-bottom: 20px;
-}
-
-.manufacters_item:nth-child(4n){
-  margin-right: 0;
 }
 
 .manufacters{
@@ -233,19 +226,22 @@ h1{
   padding-bottom: 88px;
 }
 
+.company_flex{
+  display: flex;
+  justify-content: space-between;
+}
+
 .services{
   background-color: #f3f7f8;
 }
 
 .company_about{
   width: 570px;
-  float: left;
   outline: 1px solid green;
 }
 
 .company_contacts{
   width: 300px;
-  float: right;
   outline: 1px solid green;
 }
 
@@ -254,15 +250,19 @@ h1{
   padding-bottom: 50px;
 }
 
+.up_footer_flex{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .about{
   width: 350px;
-  float: left;
   outline: 1px solid green;
 }
 
 .footer_nav{
   width: 560px;
-  float: right;
   margin-top: 40px;
   outline: 1px solid green;
   font-size: 18pt;
@@ -274,7 +274,6 @@ h1{
 
 .catalog_nav{
   width: 560px;
-  float: right;
   margin-top: 40px;
   font-size: 18pt;
   line-height: 24pt;
@@ -282,6 +281,7 @@ h1{
   font-weight: normal;
   font-family: "Cuprum";
   outline: 1px solid green;
+  margin-left: 380px;
 }
 
 .bottom_footer{
@@ -290,10 +290,13 @@ h1{
   padding-bottom: 30px;
 }
 
+.bottom_footer_flex{
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer_copyright{
   width: 240px;
-  float: left;
-  margin-right: 150px;
   font-size: 16pt;
   line-height: 18pt;
   color: #ffffff;
@@ -304,13 +307,11 @@ h1{
 
 .footer_social{
   width: 132px;
-  float: left;
   outline: 1px solid green;
 }
 
 .footer_contacts{
   width: 300px;
-  float: right;
   font-size: 18pt;
   line-height: 24pt;
   color: #ffffff;
@@ -330,9 +331,13 @@ h1{
   outline: 1px solid green;
 }
 
+.aside_catalog{
+  display: flex;
+  justify-content: space-between;
+}
+
 .aside_catalog_form {
   width: 219px;
-  float: left;
   margin-right: 20px;
   outline: 1px solid green;
 }
@@ -340,7 +345,6 @@ h1{
 /*не понятно почему не влезло? вроде все пиксель в пиксель должно войти*/
 .aside_catalog_main{
   width: 700px;
-  float: right;
   outline: 1px solid green;
 }
 
@@ -368,19 +372,16 @@ h3{
   outline: 1px solid green;
 }
 
-/*не знаю как применить эти стили только на второй странице*/
-.products_item:last-child{
-  margin-right: auto;
+.products_item_list{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.products_item{
-  margin-right: 19px;
+.products_item_clg{
+  width: 220px;
   margin-bottom: 20px;
-}
-
-.products_item:nth-child(3n){
-  margin-right: 0;
-  float: right;
+  outline: 1px solid #eaeaea;
 }
 
 .aside_catalog{
@@ -455,6 +456,7 @@ h3{
   background-color: #ff5357;
   padding: 12px 35px;
   display: inline-block;
+  margin-bottom: 20px;
 }
 
 .products_old_price {
