--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body{
   font-weight: normal;
   font-family: 'PT Sans', sans-serif;
   margin: 0;
-  /*background: url(../img/technomart-index.jpg) no-repeat;*/
 }
 
 .header_nav a{
@@ -63,6 +62,7 @@ body{
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
   display: inline-block;
+  border-radius: 3px;
 }
 
 .main_btn:hover{
@@ -78,12 +78,16 @@ body{
   margin-top: 20px;
 }
 
-.services h2, .company h2, .main_block h2{
+.services h2, .company h2, .main_block h2, .main_block_2 h2{
   font-size: 30px;
   line-height: 24px;
   color: #000000;
   font-weight: bold;
   font-family: 'Cuprum', sans-serif;
+}
+
+.services p{
+  width: 405px;
 }
 
 h1{
@@ -101,8 +105,10 @@ h1{
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
   background-color: #f2f6f8;
-  padding: 30px 30px;
-  margin-bottom: 20px;
+/*  min-height:40px;*/
+  padding: 33px 30px;
+  margin-top:10px;
+  margin-bottom: 15px;
 }
 
 .container{
@@ -113,8 +119,8 @@ h1{
 
 .up_header{
   background-color: #293449;
+  height: 42px;
 }
-/*не понятно, как убрать отступ снизу у верхнего хэдера */
 
 .site_options{
   display: flex;
@@ -448,12 +454,162 @@ h1{
 }
 
 .catalog_slider{
+  position:relative;
   width: 620px;
   height: 266px;
-  background-image: url(../img/catalog_slider_photo_1.jpg);
+/*  background-image: url(../img/catalog_slider_photo_1.jpg);*/
   background-color: #806e5a;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
 }
+
+.slide_text{
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  font-weight: normal;
+  font-family: 'PTSans', sans-serif;
+  padding: 0px 26px;
+/*  outline: 1px solid green;*/
+}
+
+.slide_title{
+  font-size: 36px;
+  line-height: 30px;
+  color: #ffffff;
+  font-weight: bold;
+  font-family: 'Cuprum', sans-serif;
+  padding-top: 24px;
+}
+
+.slide_text p{
+  margin-top: 7px;
+}
+
+.services_slider_controls{
+    position: relative;
+    width: 240px;
+    height: 220px;
+    padding-top:40px;
+    
+/*
+    text-align:center;
+    z-index:1000;
+*/
+}
+
+.services_slider_controls::after{
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 7px;
+  height: 260px;
+  background: url(../img/services_line.png) no-repeat;
+  opacity: 0.25;
+}
+
+
+
+/*
+.services_slide:nth-child(1){
+    background-image:url('../img/services_deliver.png');
+    background-repeat:no-repeat;
+}
+*/
+
+.services_slide{
+  width: 700px;
+  height: 340px;
+  position: relative;
+}
+
+.services_slide{
+    display:none;
+}
+.services_slide:nth-child(1){
+    display:block;
+}
+
+.services_slide_text{
+/*  margin: 38px 80px;*/
+  padding-top: 38px;
+  padding-left: 80px;
+  width: 275px;
+}
+
+.services_slide img{
+  position: absolute;
+  top: 38px;
+  right: 0;
+}
+
+.services_slide_title{
+  font-size: 36px;
+  line-height: 24px;
+  color: #3d546e;
+  font-weight: bold;
+  font-family: 'Cuprum', sans-serif;
+}
+
+.services_img{
+/*  position: absolute;*/
+/*
+  top: 0;
+  right: 0;
+*/
+  float: right;
+}
+
+.services_slide_text p{
+  margin-top: 26px;
+  width: 275px;
+}
+
+.slider_controls i{
+    display:inline-block;
+    width:6px;
+    height:6px;
+    margin:0 3px;
+    background:white;
+    border:2px solid white;
+    vertical-align:top;
+    border-radius:50%;
+    cursor:pointer;
+}
+
+.slide{
+    position:absolute;
+    top:0px;
+    left:0;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+    background-color:rgba(255,255,0,0.1);
+}
+
+.slide:nth-child(1){
+    background-image:url('../img/catalog_slider_photo_1.jpg');
+    background-repeat:no-repeat;
+}
+
+.slide:nth-child(2){
+    background-image:url('../img/catalog_slider_photo_2.jpg');
+    background-repeat:no-repeat;
+}
+
+.slide{
+    display:none;
+}
+.slide:nth-child(1){
+    display:block;
+}
+
+
+.slider_controls .active{
+    background: #ff5357;
+}
+
+
 
 .catalog_slider_text{
   margin-top: 20px;
@@ -476,9 +632,11 @@ h1{
 }
 
 .catalog_slider .main_btn{
-  display: inline-block;
-  margin-left: 26px;
-  margin-top: 125px;
+  display: block;
+  width: 195px;
+  padding:12px 0;
+  text-align:center;
+  margin-top: 115px;
 }
 
 .discount{
@@ -535,15 +693,30 @@ h1{
 
 
 .products_price {
+  position:relative;
+  width:80px;
   font-size: 17px;
   line-height: 18px;
   color: #ffffff;
   font-weight: bold;
   font-family: 'PT Sans', sans-serif;
   background-color: #ff5357;
-  padding: 12px 35px;
-  display: inline-block;
+  padding: 11px 30px;
+  margin:10px auto;
   margin-bottom: 20px;
+  border-radius:3px;
+  display: inline-block;
+}
+
+.products_price::after{
+  content:"";
+    position:absolute;
+    top:0;
+    right:-20px;
+    width:0;
+    height:0;
+    border:20px solid white;
+    border-left-color:#ff5357;
 }
 
 .products_old_price {
@@ -553,8 +726,10 @@ h1{
   font-weight: bold;
   font-family: 'PT Sans', sans-serif;
   text-decoration: line-through;
-  margin-bottom: 12px;
+  margin-top:15px;
+/*  margin-bottom:10px;*/
   display: block;
+  min-height:20px;
 }
 
 .manufacters_item{
@@ -563,11 +738,31 @@ h1{
   margin-bottom: 20px;
 }
 
+.manufacters_item:hover{
+  box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+}
+
+.manufacters_item:active{
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+}
+
+.manufacters_item img:active{
+  opacity: 0.3;
+}
+
 .manufacters{
   margin-bottom: 85px;
 }
 
 .main_block{
+  width: 940px;
+  padding-top: 65px;
+/*  padding-bottom: 88px;*/
+}
+
+
+
+.main_block_2{
   width: 940px;
   padding-top: 65px;
   padding-bottom: 88px;
@@ -756,11 +951,11 @@ h1{
 }
 
 .btn_inst:hover{
-  background-position: -10px -613px;
+  background-position: -10px -614px;
 }
 
 .btn_inst:active{
-  background-position: -10px -613px;
+  background-position: -10px -614px;
 }
 
 
@@ -814,15 +1009,26 @@ h1{
   margin-right: 40px;
 }
 
-/*не знаю как сделать стрелочки*/
 
 .breadcrumbs a{
+  position: relative;
   text-decoration: none;
   font-size: 13px;
   line-height: 18px;
   color: #000000;
   font-weight: normal;
   font-family: 'PTSans', sans-serif;
+}
+
+.breadcrumbs .path::before{
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: -19px;
+  width: 7px;
+  height: 12px;
+  background: url(../img/sprite_arrows.png) no-repeat;
+  background-position: -10px -190px;
 }
 
 .aside_catalog{
@@ -875,12 +1081,52 @@ h3{
 }
 
 .products_item_clg{
+  position:relative;
   width: 220px;
   margin-bottom: 20px;
   text-align: center;
-  outline: 1px solid #eaeaea;
-
+  border: 1px solid #eaeaea;
+  line-height:20px;
 }
+
+.products_item_clg:hover{
+  box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+}
+
+.products_item_clg .flag{
+    position:absolute;
+    top:-1px;
+    right:-1px;
+    width:60px;
+    height:60px;
+    text-indent:-1000px;
+    overflow:hidden;
+    z-index:20;
+}
+
+.products_item_clg .flag-new{
+    background:url("../img/new-flag.png") no-repeat 0 0;
+}
+
+.products_item_clg .actions{
+    position:absolute;
+    top:0;
+    left:0;
+    width:218px;
+    height:88px;
+    padding:40px 0;
+    background-color:rgba(255,255,255,0.9);
+    z-index:10;
+}
+
+.products_item_clg .image{
+    width:218px;
+    height:168px;
+}
+.products_item_clg .image img{
+    max-width:100%;
+}
+
 
 .products_item_clg a{
   text-decoration: none;
@@ -970,6 +1216,7 @@ h3{
 .sort_type_view{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 356px;
 }
 
@@ -1004,10 +1251,42 @@ h3{
 }
 
 .sort_arrows {
-  width: 42px;
+  width: 44px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
+
+.sort_arrows .up{
+  width: 11px;
+  height: 10px;
+  background: url(../img/sprite_arrows.png) no-repeat;
+  background-position: -10px -100px;
+}
+
+.sort_arrows .up:hover{
+  background-position: -10px -160px;
+}
+
+.sort_arrows .up:active{
+  background-position: -10px -130px;
+}
+
+.sort_arrows .down{
+  width: 11px;
+  height: 10px;
+  background: url(../img/sprite_arrows.png) no-repeat;
+  background-position: -10px -10px;
+}
+
+.sort_arrows .down:hover{
+  background-position: -10px -70px;
+}
+
+.sort_arrows .down:active{
+  background-position: -10px -40px;
+}
+
 
 .buy_options ul{
   margin: 0;
@@ -1015,21 +1294,27 @@ h3{
   list-style: none;
 }
 
-.buy_btn {
-  display: inline-block;
-/*  width: 134px;*/
-/*  padding: 12px 48px;*/
-  padding: 12px 48px;
-  background-color: #63a63e;
+.buy_btn, .bookmark_btn {
+  display:block;
+  width:129px;
+  margin:0 auto;
+  margin-bottom:7px;
+  padding:7px 0;
+  background-color:#63a63e;
+  color:white;
+  font-size:14px;
+  font-weight:normal;
+  font-family:"Cuprum", sans-serif;
+  line-height:18px;
+  text-decoration:none;
+  text-transform:uppercase;    
+  border-radius:3px;
+}
+
+.buy_btn{
   position: relative;
-  font-size: 14px;
-  line-height: 18px;
-  color: #ffffff;
-  font-weight: normal;
-  font-family: 'Cuprum', sans-serif;
-  text-align: center;
-  margin-top: 42px;
-  margin-bottom: 8px;
+  border-bottom:3px solid #63a63e;
+  border-bottom-color:#367315; 
 }
 
 .buy_btn:hover{
@@ -1038,20 +1323,21 @@ h3{
 
 .buy_btn:active{
   background-color: #518534;
+  border-bottom-color:#518534; 
 }
 
 .bookmark_btn {
-  display: inline-block;
-  padding: 12px 33px;
-  background-color: #ffffff;
-  font-size: 14px;
-  line-height: 18px;
-  color: #32425c;
-  font-weight: normal;
-  font-family: 'Cuprum', sans-serif;
-  text-align: center;
-  border: 3px solid #63a63e;
-  margin-bottom: 48px;
+  color:#32425c;
+  background:white;
+  border:3px solid #63a63e;
+  border-color:#63a63e;
+}
+
+.products_item_clg .actions{
+    display:none;
+}
+.products_item_clg:hover .actions{
+    display:block;
 }
 
 .bookmark_btn:hover{
@@ -1066,7 +1352,7 @@ h3{
 .buy_btn::before{
   content: "";
   position: absolute;
-  top: 10px;
+  top: 6px;
   left: 12px;
   width: 17px;
   height: 16px;
@@ -1216,7 +1502,7 @@ h3{
   width: 270px;
   padding: 12px;
   padding-left: 49px;
-  font-family: Cuprum, "Arial", sans-serif;
+  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 17px;
   line-height: 18px;
   color: #ffffff;
@@ -1271,22 +1557,205 @@ h3{
 
 
 
-.checkbox {
-/*  box-sizing: border-box;*/
+
+
+.range-filter {
+  font-family: 'PTSans', sans-serif;
+  font-size: 17px;
+  color: #000000;
+  width: 220px;
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 25px;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  border-radius: 5px;
+  background: #f7f3ec;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-bottom: 8px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: #00ca74;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 0px;
+  width: 4px;
+  height: 4px;
+  border: 8px solid #fff;
+  background: #ababab;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 20px;
+}
+
+.range-controls .toggle-max {
+  left: 145px;
+}
+
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+  font-size: 16px;
+  display: inline-block;
+  width: 50%;
+}
+
+.max-price {
+  text-align: right;
+}
+
+.price-controls input {
+  display: inline-block;
+  width: 95px;
+  font-family: 'PTSans', sans-serif;
+  font-size: 17px;
+  padding: 12px 0px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  background: #f7f3ec;
+}
+
+.price-controls p{
+  display: inline-block;
+  font-family: 'PTSans', sans-serif;
+  font-size: 17px;
+  width: 10px;
+  margin: 0 10px;
+  padding: 0;
+}
+
+
+.manufacter_checkbox {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  margin-bottom: 16px;
+}
+
+.filter_manufacters :last-child{
+  margin-bottom: 0px;
+}
+
+.manufacter_checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.manufacter_checkbox input[type="checkbox"] + .checkbox_indicator {
+  position: absolute;
+  top: -3px;
+  left: 0;
   width: 27px;
   height: 23px;
-/*
-  padding: 12px;
-  padding-left: 49px;
-  font-family: Cuprum, "Arial", sans-serif;
-  font-size: 17px;
-  line-height: 18px;
-  color: #ffffff;
-  border: none;
-  background-color: #293449;
-  outline: none;
-*/
   background: url(../img/spritesheet.png) no-repeat;
   background-position: -10px -269px;
 }
-/* не пойму как задать свою картинку чекбоксам и радио*/
+
+.manufacter_checkbox input[type="checkbox"]:checked + .checkbox_indicator {
+  background-position: -10px -312px;
+}
+
+.filter_manufacters {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #e5e5e5;
+  padding-bottom: 25px;
+/*  padding-top: 20px;*/
+}
+
+.supply_radio {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  margin-bottom: 16px;
+}
+
+.supply_radio input[type="radio"] {
+  display: none;
+}
+
+.supply_radio input[type="radio"] + .radio_indicator {
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  background: url(../img/spritesheet.png) no-repeat;
+  background-position: -10px -937px;
+}
+
+.supply_radio input[type="radio"]:checked + .radio_indicator {
+  background-position: -10px -1027px;
+}
+
+.filter_supply {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+
+.filter_btn {
+  padding: 12px 38px;
+  background-color: #ffffff;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+}
+
+.services_slider {
+  width:940px;
+  display: flex;
+  align-items: flex-start;
+/*  margin:0 auto;*/
+}
+
+.services_slider_controls i{
+  display: block;
+/*  width: 240px;*/
+  background-color: #3d546e;
+  cursor:pointer;
+  font-size: 21px;
+  line-height: 30px;
+  color: #ffffff;
+  font-weight: normal;
+  font-family: 'Cuprum', sans-serif;
+  padding: 16px 22px;
+  font-style: normal;
+}
+
+.services_slider_controls .active{
+  background-color: #ffffff;
+  color: #3d546e;
+}
+
+.slider_controls {
+  position:absolute;
+    bottom:40px;
+    left:50%;
+    width:200px;
+    height:10px;
+    margin-left:-100px;
+    text-align:center;
+    z-index:1000;
+}
