--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body{
   font-family: 'Cuprum', sans-serif;
   text-decoration: none;
   color: #ffffff;
-  padding: 20px 34px;
+  padding: 19px 34px;
+  border-bottom: 5px solid #293449;
   background-color: #3d546e;
   display: block;
 }
@@ -50,11 +51,12 @@ body{
   font-family: 'Cuprum', sans-serif;
   margin-left: 30px;
   display: inline-block;
+  margin: 30px 30px;
 }
 
 .main_btn{
   text-decoration: none;
-  padding: 12px 55px;
+  padding: 10px 55px;
   background-color: #ff5357;
   font-size: 14px;
   line-height: 18px;
@@ -63,6 +65,7 @@ body{
   font-family: 'Cuprum', sans-serif;
   display: inline-block;
   border-radius: 3px;
+  text-transform: uppercase;
 }
 
 .main_btn:hover{
@@ -75,10 +78,14 @@ body{
 
 .title .main_btn {
   margin-right: 25px;
-  margin-top: 20px;
+  margin-top: 27px;
+  width: 252px;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
 }
 
-.services h2, .company h2, .main_block h2, .main_block_2 h2{
+.services h2, .company h2, .main_block h2, .main_block_2, .main_block_3 h2{
   font-size: 30px;
   line-height: 24px;
   color: #000000;
@@ -88,6 +95,7 @@ body{
 
 .services p{
   width: 405px;
+/*  margin: 0*/
 }
 
 h1{
@@ -96,6 +104,8 @@ h1{
   color: #000000;
   font-weight: bold;
   font-family: 'PT Sans', sans-serif;
+  margin-bottom: 10px;
+  margin-top: 14px;
 }
 
 .catalog_title h1{
@@ -106,15 +116,15 @@ h1{
   font-family: 'Cuprum', sans-serif;
   background-color: #f2f6f8;
 /*  min-height:40px;*/
-  padding: 33px 30px;
+  padding: 28px 30px;
   margin-top:10px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .container{
   width: 940px;
   margin: 0 auto;
-  outline: 1px solid yellow;
+/*  outline: 1px solid yellow;*/
 }
 
 .up_header{
@@ -183,7 +193,7 @@ h1{
   content: "";
   position: absolute;
   top: 12px;
-  left: 16px;
+  left: 14px;
   width: 17px;
   height: 16px;
   background: url(../img/spritesheet.png) no-repeat;
@@ -215,7 +225,7 @@ h1{
 .bottom_header{
   background-color: #f3f7f8;
   margin-top: 0;
-  padding-top: 40px;
+  padding-top: 45px;
   padding-bottom: 60px;
 }
 
@@ -235,7 +245,14 @@ h1{
   font-family: 'Cuprum', sans-serif;
   width: 200px;
   margin-left: 50px;
-  outline: 1px solid green;
+/*  margin-right: 30px;*/
+/*  outline: 1px solid green;*/
+}
+
+.info p{
+  padding: 0;
+  padding-top: 6px;
+  margin: 0;
 }
 
 .contacts{
@@ -249,7 +266,9 @@ h1{
   color: #fb463c;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
-  padding: 10px 48px;
+  padding: 12px 48px;
+  padding-left: 70px;
+/*  text-align: center;*/
   position: relative;
 }
 
@@ -270,19 +289,21 @@ h1{
   color: #3d546e;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
+  text-align: center;
 }
 
 .login_options{
   width: 282px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+/*  margin: 0 auto;*/
 }
 
 .login_options .login{
   background-color: white;
-  padding: 12px 20px;
+  padding: 14px 23px;
   padding-left: 48px;
   position: relative;
   text-decoration: none;
@@ -325,7 +346,7 @@ h1{
 
 .login_options .register{
   background-color: white;
-  padding: 12px 20px;
+  padding: 14px 23px;
   text-decoration: none;
 }
 
@@ -373,12 +394,13 @@ h1{
   font-weight: bold;
   font-family: 'Cuprum', sans-serif;
   margin-left: 22px;
-  margin-top: 23px;
+  margin-top: 20px;
   margin-bottom: 0px;
 }
 
 .catalog_item{
   width: 300px;
+  position: relative;
 }
 
 /*как сделать чтобы шрифт был непрозрачным*/
@@ -390,11 +412,14 @@ h1{
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
   background-color: rgba(0,0,0,0.1);
-  padding: 12px 24px;
+  padding: 10px 0px;
+  width: 135px;
+  text-align: center;
   display: inline-block;
-  margin-left: 25px;
+  margin-left: 24px;
   margin-bottom: 22px;
-  margin-top: 17px;
+  margin-top: 12px;
+  border-radius: 3px;
 }
 
 .item_btn:hover{
@@ -478,7 +503,8 @@ h1{
   color: #ffffff;
   font-weight: bold;
   font-family: 'Cuprum', sans-serif;
-  padding-top: 24px;
+  margin-top: 26px;
+  text-transform: uppercase;
 }
 
 .slide_text p{
@@ -519,7 +545,7 @@ h1{
 
 .services_slide{
   width: 700px;
-  height: 340px;
+  height: 258px;
   position: relative;
 }
 
@@ -532,14 +558,14 @@ h1{
 
 .services_slide_text{
 /*  margin: 38px 80px;*/
-  padding-top: 38px;
-  padding-left: 80px;
+  margin-top: 42px;
+  margin-left: 80px;
   width: 275px;
 }
 
 .services_slide img{
   position: absolute;
-  top: 38px;
+  top: 22px;
   right: 0;
 }
 
@@ -561,7 +587,7 @@ h1{
 }
 
 .services_slide_text p{
-  margin-top: 26px;
+  margin-top: 30px;
   width: 275px;
 }
 
@@ -634,9 +660,9 @@ h1{
 .catalog_slider .main_btn{
   display: block;
   width: 195px;
-  padding:12px 0;
+  padding:10px 0;
   text-align:center;
-  margin-top: 115px;
+  margin-top: 120px;
 }
 
 .discount{
@@ -681,7 +707,7 @@ h1{
 }
 
 .products_item{
-  outline: 1px solid #eaeaea;
+  border: 1px solid #eaeaea;
   width: 220px;
   text-align: center;
 }
@@ -726,15 +752,14 @@ h1{
   font-weight: bold;
   font-family: 'PT Sans', sans-serif;
   text-decoration: line-through;
-  margin-top:15px;
 /*  margin-bottom:10px;*/
   display: block;
   min-height:20px;
 }
 
 .manufacters_item{
-  width: 220px;
-  outline: 1px solid #eaeaea;
+  width: 218px;
+  border: 1px solid #eaeaea;
   margin-bottom: 20px;
 }
 
@@ -746,26 +771,31 @@ h1{
   box-shadow: 0 4px 10px rgba(0,0,0,0.5);
 }
 
+
 .manufacters_item img:active{
   opacity: 0.3;
 }
 
 .manufacters{
-  margin-bottom: 85px;
+  margin-bottom: 52px;
 }
 
 .main_block{
   width: 940px;
-  padding-top: 65px;
-/*  padding-bottom: 88px;*/
+  padding-top: 42px;
+  padding-bottom: 24px;
 }
 
 
 
 .main_block_2{
   width: 940px;
+/*
   padding-top: 65px;
   padding-bottom: 88px;
+*/
+  padding-top: 58px;
+  padding-bottom: 87px;
 }
 
 .company_flex{
@@ -779,22 +809,40 @@ h1{
 
 .company_about{
   width: 570px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
+}
+
+.company_about .main_btn{
+/*  display: block;*/
+  width: 220px;
+  padding:10px 0;
+  text-align:center;
+  margin-top: 16px;
+}
+
+.company_about p{
+  margin-bottom: 24px;
 }
 
 .company_contacts{
   width: 300px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
+}
+
+.company_contacts p{
+  width: 180px;
+  margin-bottom: 34px;
 }
 
 .company_contacts .main_btn{
-  padding-left: 69px;
-  padding-right: 69px;
+  padding-left: 61px;
+  padding-right: 61px;
+  margin-top: 32px;
 }
 
 .up_footer{
   background-color: #3d546e;
-  padding-bottom: 50px;
+  padding-bottom: 34px;
 }
 
 .up_footer_flex{
@@ -805,7 +853,7 @@ h1{
 
 .about{
   width: 350px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
 }
 
 .about p{
@@ -815,14 +863,18 @@ h1{
 .nav_block
 
 .footer_nav{
-  width: 600px;
-  margin-top: 40px;
-  outline: 1px solid green;
+/*  width: 546px;*/
+  margin-top: 36px;
+/*  outline: 1px solid green;*/
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
+}
+
+.nav_block{
+  width: 546px;
 }
 
 .footer_nav a{
@@ -849,15 +901,15 @@ h1{
 }
 
 .catalog_nav{
-  width: 560px;
-  margin-top: 30px;
-  margin-left: 40px;
+/*  width: 524px;*/
+  margin-top: 36px;
+  margin-left: 20px;
   font-size: 18px;
   line-height: 24px;
   color: #ffda96;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
 }
 
 .catalog_nav ul{
@@ -895,7 +947,7 @@ h1{
 
 .bottom_footer_flex{
   display: flex;
-  justify-content: space-between;
+/*  justify-content: space-between;*/
 }
 
 .footer_copyright{
@@ -905,14 +957,16 @@ h1{
   color: #ffffff;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
-  outline: 1px solid green;
+  margin-right: 150px;
+/*  outline: 1px solid green;*/
 }
 
 .footer_social{
   width: 132px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
   display: flex;
   justify-content: space-between;
+  margin-right: 118px;
 }
 
 .social_btn{
@@ -966,9 +1020,13 @@ h1{
   color: #ffffff;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
   display: flex;
   justify-content: space-between;
+}
+
+.footer_contacts p{
+  margin-right: 52px;
 }
 
 .footer_contacts a{
@@ -994,7 +1052,7 @@ h1{
   color: #000000;
   font-weight: normal;
   font-family: 'PT Sans', sans-serif;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
 }
 
 .breadcrumbs ul{
@@ -1006,7 +1064,7 @@ h1{
 }
 
 .breadcrumbs li{
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
 
@@ -1034,28 +1092,31 @@ h1{
 .aside_catalog{
   display: flex;
   justify-content: space-between;
+  margin-bottom: 56px;
 }
 
 .aside_catalog_form {
   width: 219px;
   margin-right: 20px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
 }
 
 .aside_catalog_main{
   width: 700px;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
 }
 
 .aside_catalog_name{
   background-color: #f7f3ec;
-  padding: 12px 18px;
+  padding: 10px 18px;
   display: block;
   font-size: 13px;
   line-height: 18px;
   color: #000000;
   font-weight: normal;
   font-family: 'PT Sans', sans-serif;
+  border-radius: 3px;
+  margin-bottom: 0;
 }
 
 h3{
@@ -1064,20 +1125,23 @@ h3{
   color: #000000;
   font-weight: bold;
   font-family: 'PT Sans', sans-serif;
+  margin-bottom: 10px;
 }
 
 .catalog_sort{
   background-color: #f7f3ec;
-  outline: 1px solid green;
+/*  outline: 1px solid green;*/
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  border-radius: 3px;
 }
 
 .products_item_list{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 24px;
 }
 
 .products_item_clg{
@@ -1104,7 +1168,22 @@ h3{
     z-index:20;
 }
 
+.catalog_item .flag{
+    position:absolute;
+    top:-1px;
+    right:-1px;
+    width:60px;
+    height:60px;
+    text-indent:-1000px;
+    overflow:hidden;
+    z-index:20;
+}
+
 .products_item_clg .flag-new{
+    background:url("../img/new-flag.png") no-repeat 0 0;
+}
+
+.catalog_item .flag-new{
     background:url("../img/new-flag.png") no-repeat 0 0;
 }
 
@@ -1120,11 +1199,12 @@ h3{
 }
 
 .products_item_clg .image{
-    width:218px;
-    height:168px;
+    width:180px;
+    height:160px;
 }
-.products_item_clg .image img{
+.products_item_clg img{
     max-width:100%;
+  
 }
 
 
@@ -1132,9 +1212,7 @@ h3{
   text-decoration: none;
 }
 
-.aside_catalog{
-  margin-bottom: 60px;
-}
+
 
 .few_words{
   background-color: #f3f7f8;
@@ -1179,6 +1257,28 @@ h3{
   color: #000000;
   font-weight: bold;
   font-family: 'Cuprum', sans-serif;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.trans_companies li{
+  position: relative;
+  margin-left: 36px;
+  margin-bottom: 20px;
+}
+
+.trans_companies li:before{
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: -36px;
+  width: 25px;
+  height: 2px; 
+  border: none;
+  background-color: red; 
+/*  color: red; */
+  
 }
 
 .about p {
@@ -1209,7 +1309,8 @@ h3{
 
 .sort_type {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+/*  justify-content: space-between;*/
   width: 460px;
 }
 
@@ -1218,15 +1319,21 @@ h3{
   justify-content: space-between;
   align-items: center;
   width: 356px;
+  margin: 0;
+  margin-right: 46px;
+  padding: 0;
+  list-style: none;
 }
 
 
 
+/*
 .sort_type ul{
   margin: 0;
   padding: 0;
   list-style: none;
 }
+*/
 
 .sort_type_view a{
   text-decoration: none;
@@ -1255,13 +1362,18 @@ h3{
   display: flex;
   justify-content: space-between;
   align-items: center;
+/*  margin-right: 16px;*/
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .sort_arrows .up{
-  width: 11px;
+  width: 12px;
   height: 10px;
   background: url(../img/sprite_arrows.png) no-repeat;
   background-position: -10px -100px;
+  display: block;
 }
 
 .sort_arrows .up:hover{
@@ -1277,6 +1389,7 @@ h3{
   height: 10px;
   background: url(../img/sprite_arrows.png) no-repeat;
   background-position: -10px -10px;
+  display: block;
 }
 
 .sort_arrows .down:hover{
@@ -1377,10 +1490,11 @@ h3{
   color: #000000;
   font-weight: normal;
   font-family: 'PT Sans', sans-serif;
-  padding: 12px 16px;
+  padding: 9px 15px;
   background-color: #ffffff;
   border: 1px solid #e5e5e5;
-  margin-right: 10px;
+  margin-right: 6px;
+  border-radius: 3px;
 }
 
 .next{
@@ -1407,14 +1521,24 @@ h3{
 
 .my_orders{
   margin: 0;
+  margin-top: 12px;
   padding: 0;
-  list-style: none;
+  padding-left: 18px;
+/*  list-style: none;*/
   display: flex;
-  justify-content: space-around;
+/*  justify-content: space-around;*/
   font-size: 16px;
   line-height: 18px;
   font-weight: normal;
   font-family: 'Cuprum', sans-serif;
+}
+
+.my_orders li:first-child{
+  list-style: none;
+}
+
+.my_orders li:nth-child(2){
+  margin-left: 30px;
 }
 
 .my_orders a{
@@ -1547,7 +1671,9 @@ h3{
     color: #ffffff;
 }
 .top_search_input:focus + .top_search_label:before {
-    color: #ee3643;
+  color: #ee3643;
+  background-position: -10px -1154px;
+  opacity: 1;
 }
 
 
@@ -1565,7 +1691,8 @@ h3{
   color: #000000;
   width: 220px;
   border-bottom: 1px solid #e5e5e5;
-  padding-bottom: 25px;
+  padding-bottom: 23px;
+  margin-top: 0;
 }
 
 .range-controls {
@@ -1577,6 +1704,7 @@ h3{
   padding-right: 20px;
   padding-left: 20px;
   margin-bottom: 8px;
+  margin-top: 0;
 }
 
 .range-controls .scale {
@@ -1630,7 +1758,7 @@ h3{
   width: 95px;
   font-family: 'PTSans', sans-serif;
   font-size: 17px;
-  padding: 12px 0px;
+  padding: 10px 0px;
   text-align: center;
   color: #283136;
   border: none;
@@ -1652,7 +1780,7 @@ h3{
   position: relative;
   padding-left: 30px;
   cursor: pointer;
-  margin-bottom: 16px;
+  margin-bottom: 22px;
 }
 
 .filter_manufacters :last-child{
@@ -1665,8 +1793,8 @@ h3{
 
 .manufacter_checkbox input[type="checkbox"] + .checkbox_indicator {
   position: absolute;
-  top: -3px;
-  left: 0;
+  top: -1px;
+  left: -2px;
   width: 27px;
   height: 23px;
   background: url(../img/spritesheet.png) no-repeat;
@@ -1681,7 +1809,7 @@ h3{
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #e5e5e5;
-  padding-bottom: 25px;
+  padding-bottom: 18px;
 /*  padding-top: 20px;*/
 }
 
@@ -1689,7 +1817,7 @@ h3{
   position: relative;
   padding-left: 30px;
   cursor: pointer;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .supply_radio input[type="radio"] {
@@ -1714,10 +1842,11 @@ h3{
   display: flex;
   flex-direction: column;
   margin-bottom: 60px;
+  margin-top: 15px;
 }
 
 .filter_btn {
-  padding: 12px 38px;
+  padding: 10px 34px;
   background-color: #ffffff;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
@@ -1728,6 +1857,7 @@ h3{
   display: flex;
   align-items: flex-start;
 /*  margin:0 auto;*/
+  margin-top: 34px;
 }
 
 .services_slider_controls i{
@@ -1744,6 +1874,10 @@ h3{
   font-style: normal;
 }
 
+.services_slider_controls i:hover{
+  background-color: #293449;
+}
+
 .services_slider_controls .active{
   background-color: #ffffff;
   color: #3d546e;
@@ -1751,11 +1885,224 @@ h3{
 
 .slider_controls {
   position:absolute;
-    bottom:40px;
+    bottom:35px;
     left:50%;
     width:200px;
     height:10px;
     margin-left:-100px;
     text-align:center;
     z-index:1000;
+}
+
+.modal_content {
+  display: none;
+  position: absolute;
+  top: 120px;
+  left: 50%;
+  margin-left: -330px;
+  width: 620px;
+/*  padding: 46px 80px;*/
+  color: #000000;
+  background-color: #ffffff;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.75);
+  border-top: 7px solid #ff5357;
+}
+
+.modal_content p{
+  position: relative;
+  font-size: 30px;
+  line-height: 18px;
+  color: #000000;
+  font-weight: normal;
+  font-family: 'Cuprum', sans-serif;
+  margin: 62px 126px;
+  margin-left: 178px;
+}
+
+.modal_content p::before{
+  content: "";
+  position: absolute;
+  top: -24px;
+  left: -100px;
+  width: 66px;
+  height: 66px;
+  background: url(../img/basket_buy.png) no-repeat;
+}
+
+.modal_content .write_us {
+/*  margin-top: 46px;*/
+/*  margin-bottom: 10px;*/
+  
+}
+
+.write_us label{
+  font-size: 18px;
+  line-height: 18px;
+  color: #000000;
+  font-weight: normal;
+  font-family: 'Cuprum', sans-serif;
+}
+
+.write_us .user_name, .user_email, .user_text  {
+  width: 216px;
+  margin: 0;
+/*  margin-bottom: 10px;*/
+  padding: 10px 14px;
+  
+  font-size: 13px;
+  line-height: 18px;
+  color: #a9a9a9;
+  font-weight: normal;
+  font-family: 'PT Sans', sans-serif;
+  background-color: #ffffff;
+  border: 1px solid #dee3e4;
+  border-radius: 1px;
+  box-sizing: border-box;
+}
+
+.write_us .user_text {
+  width: 456px;
+  height: 91px;
+  
+}
+
+.write_us .main_btn{
+  width: 458px;
+  border: none;
+}
+
+.modal_content_close {
+  position: absolute;
+  top: 9px;
+  right: 9px;
+  width: 22px;
+  height: 22px;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.modal_content_close::before,
+.modal_content_close::after {
+  top: 10px;
+  left: -1px;
+  content: "";
+  position: absolute;
+
+  width: 25px;
+  height: 3px;
+  background-color: #ff5357;
+  border-radius: 1px;
+}
+
+.modal_content_close::before {
+  transform: rotate(45deg);
+}
+
+.modal_content_close::after {
+  transform: rotate(-45deg);
+}
+
+.user_name_block, .user_email_block {
+  width: 220px;
+}
+
+
+
+.user_text_block {
+  margin-top: 20px;
+}
+
+.modal_btn_block {
+  margin-top: 36px;
+  background-color: #f4f4f4;
+  padding: 36px 80px;
+}
+
+.write_us_text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 46px 80px;
+}
+
+.modal_content_map {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 20;
+  margin-top: -223px;
+  margin-left: -470px;
+  width: 940px;
+  height: 446px;
+  background: #e9e5dc url("../img/big_map.jpg");
+  box-shadow: 0px 0px 15px 1.28px rgba(0, 0, 0, 0.5);
+}
+
+.modal_overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+
+
+.order_btn_block {
+  margin-top: 36px;
+  background-color: #f4f4f4;
+  padding: 36px 70px;
+}
+
+.order_btn_block .main_btn{
+  width: 220px;
+  padding: 12px 0px;
+  text-align: center;
+/*  margin-right: 10px;*/
+}
+
+.order_btn {
+  text-decoration: none;
+  background-color: #ffffff;
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+  font-weight: normal;
+  font-family: 'Cuprum', sans-serif;
+  display: inline-block;
+  border-radius: 3px;
+  width: 220px;
+  padding: 12px 0px;
+  text-align: center;
+  margin-left: 20px;
+}
+
+.order_btn:hover{
+  background-color: #e6e6e6;
+}
+
+.order_btn:active{
+  background-color: #d8d8d8;
+}
+
+.main_block_3 {
+   width: 940px;
+/*
+  padding-top: 65px;
+  padding-bottom: 88px;
+*/
+  padding-top: 42px;
+  padding-bottom: 56px;
+}
+
+.main_block_3 p{
+  margin-top: 30px;
 }
